fix: fix width of unordered list in navbar, it was covering links

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ nav>ul {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 100%;
+    width: 70%;
     display: flex;
     justify-content: center;
     align-content: center;
